k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mi-app.local  # <--- Esta es la magia
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bot-externo # El nombre del Service que creamos antes
            port:
              number: 80
